<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31474e"
    android:id="@+id/partyChoice"
    tools:context="tp2.tpalt.upmc.quizzforfriend.MainActivity"
    android:paddingBottom="@android:dimen/notification_large_icon_height">


    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:paddingTop="100dp"
        android:textColor="#eae5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        tools:ignore="RtlHardcoded">


        <ImageButton
            android:text="@string/MUTE_SOUND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/muteSound"
            android:onClick="toogleSound"
            android:background="@android:drawable/ic_lock_silent_mode" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider">

            <Button
                android:id="@+id/boutonSolo"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/PARTY_SOLO"
                android:onClick="playSelectPartySound"/>

            <Button
                android:id="@+id/boutonVersus"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/VERSUS_PARTY"
                android:onClick="playSelectPartySound"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
