<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31474e"
    android:id="@+id/listdesTheme">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:background="@android:color/holo_blue_dark">
        <ImageButton
            android:text="@string/MUTE_SOUND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/muteSound"
            android:onClick="toogleSound"
            android:background="@android:drawable/ic_lock_silent_mode" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/available_theme"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:paddingTop="@android:dimen/notification_large_icon_height"
        android:paddingBottom="@android:dimen/notification_large_icon_height"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/clic_yo_start_party"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="@dimen/activity_vertical_margin" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listTheme"
        android:clickable="true"/>
</LinearLayout>