<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#31474e"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/prtlyt">
    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/readeaySteadyGo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@android:color/holo_blue_dark">
            <ImageButton
                android:text="@string/MUTE_SOUND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/muteSound"
                android:onClick="toogleSound"
                android:background="@android:drawable/ic_lock_silent_mode" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intromsg"
            android:text="@string/part_will_start"
            android:textColor="#FFFFFF"
            android:textSize="56sp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:paddingTop="@android:dimen/notification_large_icon_height"
            android:paddingBottom="@android:dimen/notification_large_icon_height"
            android:background="@android:color/holo_blue_dark" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/decompte"
            android:textAlignment="center"
            android:text="On commence dans 10 Secondes :)"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:padding="5dp"
            android:background="@android:color/holo_blue_dark" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theme"
            android:textAlignment="center"
            android:text="..."
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:padding="10dp"
            android:background="@android:color/holo_blue_dark" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intromsgdesc"
            android:textAlignment="center"
            android:text="@string/part_will_start_desc"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:padding="5dp"
            android:background="@android:color/holo_blue_dark" />
    </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@android:color/holo_blue_dark">
            <ImageButton
                android:text="@string/MUTE_SOUND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/muteSound2"
                android:onClick="toogleSound"
                android:background="@android:drawable/ic_lock_silent_mode" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionOverView"
            android:text=" "
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:paddingTop="@android:dimen/notification_large_icon_height"
            android:paddingBottom="@android:dimen/notification_large_icon_height"
            android:background="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tfgans"
            android:text="@string/clic_good_answer_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:padding="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:id="@+id/answlay"
            android:visibility="gone"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <LinearLayout
                android:background="@drawable/border_background"
                android:layout_weight="1"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:background="@drawable/border_background"
                    android:layout_weight="0.5"
                    android:text="..."
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/response1OverView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal|center" />

                <TextView
                    android:background="@drawable/border_background"
                    android:layout_weight="0.5"
                    android:text="..."
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/response2OverView"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:gravity="center_vertical|center_horizontal|center"  />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/border_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@drawable/border_background"
                    android:layout_weight="1"
                    android:text="..."
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/response3OverView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal|center" />

                <TextView
                    android:background="@drawable/border_background"
                    android:layout_weight="1"
                    android:text="..."
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/response4OverView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal|center" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>